--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-select": "^5.10.1",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
